--- a/contact_en.html
+++ b/contact_en.html
@@ -15,81 +15,130 @@
         header {
             background-color: white;
             color: #0F4499;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            padding: 15px;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             padding: 0;
+            font-size: 1.5em;
         }
         header img {
-            height: 80px;
+            height: 200px; /* 电脑端logo尺寸 */
+            margin-top: 15px;
         }
         nav {
+            background-color: white;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .nav-links {
             display: flex;
             justify-content: center;
-            background-color: white;
-            padding: 10px 0;
+            flex-wrap: wrap;
+            gap: 10px;
         }
         nav a {
             color: #0F4499;
-            padding: 0 15px;
+            padding: 8px 15px;
             text-decoration: none;
             text-align: center;
             font-weight: bold;
+            white-space: nowrap;
         }
         nav a:hover, nav .active {
             background-color: #ddd;
             color: black;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         .language-switch {
-            margin-left: 20px;
+            text-align: center;
+            margin-top: 10px;
+            padding: 5px;
         }
         main {
-            padding: 20px;
+            padding: 15px;
             max-width: 800px;
             margin: 0 auto;
         }
-        .contact-info {
-            display: flex;
-            align-items: center;
-        }
-        .qr-code {
-            margin-left: 10px;
-        }
-        footer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 15px;
+        .contact-container {
             background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
             color: #0F4499;
+            margin-top: 0;
+        }
+        .contact-info {
             margin-top: 20px;
         }
-        footer img {
-            height: 100px;
+        .contact-info p {
+            margin: 10px 0;
+            font-size: 1.1em;
+        }
+        .qr-code-container {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-top: 20px;
+        }
+        .qr-code img {
+            width: 150px;
+            height: auto;
+        }
+        footer {
+            background-color: white;
+            color: #0F4499;
+            padding: 20px;
+            margin-top: 20px;
+            text-align: center;
         }
         .footer-text {
             line-height: 1.8;
-            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.2em;
+            }
+            header img {
+                height: 100px; /* 移动端logo尺寸 */
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
+            .qr-code img {
+                width: 100px;
+            }
+            .contact-container {
+                padding: 15px;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>High5 Semiconductor (Hong Kong) Limited</h1>
+        <h1>High5 Semiconductor (Hong Kong) Limited<br>高武半导体（香港）有限公司</h1>
         <img src="logo.png" alt="Company Logo">
     </header>
     <nav>
-        <a href="home_en.html">Home Page</a>
-        <a href="news_en.html">News</a>
-        <a href="products_en.html">Products</a>
-        <a href="design_service_en.html">Design Service</a>
-        <a href="members_en.html">Members</a>
-        <a href="contact_en.html" class="active">Contact Us</a>
+        <div class="nav-links">
+            <a href="home_en.html">Home Page</a>
+            <a href="news_en.html">News</a>
+            <a href="products_en.html">Products</a>
+            <a href="design_service_en.html">Design Service</a>
+            <a href="members_en.html">Members</a>
+            <a href="contact_en.html" class="active">Contact Us</a>
+        </div>
         <div class="language-switch">
             <a href="contact_en.html">Eng</a> | 
             <a href="contact_cn.html">简体中文</a> | 
@@ -97,13 +146,17 @@
         </div>
     </nav>
     <main>
-        <h2>Contact Information</h2>
-        <p><strong>Email:</strong> high5semi@gmail.com</p>
-        <p><strong>Address:</strong> Unit 309B, Floor 5/F, 5W Building, HKSP, Shatin, Hong Kong</p>
-        <div class="contact-info">
-            <p><strong>Wechat:</strong></p>
-            <div class="qr-code">
-                <img src="high5semi QR code.jpg" alt="Wechat QR Code" width="100">
+        <div class="contact-container">
+            <h2>Contact Information</h2>
+            <div class="contact-info">
+                <p><strong>Email:</strong> high5semi@gmail.com</p>
+                <p><strong>Address:</strong> Unit 309B, Floor 5/F, 5W Building, HKSP, Shatin, Hong Kong</p>
+            </div>
+            <div class="qr-code-container">
+                <p><strong>WeChat:</strong></p>
+                <div class="qr-code">
+                    <img src="high5semi QR code.jpg" alt="WeChat QR Code">
+                </div>
             </div>
         </div>
     </main>
