--- a/design_service_en.html
+++ b/design_service_en.html
@@ -15,74 +15,123 @@
         header {
             background-color: white;
             color: #0F4499;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            padding: 15px;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             padding: 0;
+            font-size: 1.5em;
         }
         header img {
-            height: 80px;
+            height: 200px; /* 电脑端logo尺寸 */
+            margin-top: 15px;
         }
         nav {
+            background-color: white;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .nav-links {
             display: flex;
             justify-content: center;
-            background-color: white;
-            padding: 10px 0;
+            flex-wrap: wrap;
+            gap: 10px;
         }
         nav a {
             color: #0F4499;
-            padding: 0 15px;
+            padding: 8px 15px;
             text-decoration: none;
             text-align: center;
             font-weight: bold;
+            white-space: nowrap;
         }
         nav a:hover, nav .active {
             background-color: #ddd;
             color: black;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         .language-switch {
-            margin-left: 20px;
+            text-align: center;
+            margin-top: 10px;
+            padding: 5px;
         }
         main {
-            padding: 20px;
+            padding: 15px;
             max-width: 800px;
             margin: 0 auto;
         }
+        .service-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #0F4499;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+        ul {
+            padding-left: 20px;
+            margin: 0;
+        }
+        li {
+            margin-bottom: 15px;
+            line-height: 1.6;
+            font-size: 1.1em;
+        }
         footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
             background-color: white;
             color: #0F4499;
+            padding: 20px;
             margin-top: 20px;
-        }
-        footer img {
-            height: 100px;
+            text-align: center;
         }
         .footer-text {
             line-height: 1.8;
-            text-align: left;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.2em;
+            }
+            header img {
+                height: 100px; /* 移动端logo尺寸 */
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
+            .service-container {
+                padding: 15px;
+            }
+            li {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>High5 Semiconductor (Hong Kong) Limited</h1>
+        <h1>High5 Semiconductor (Hong Kong) Limited<br>高武半导体（香港）有限公司</h1>
         <img src="logo.png" alt="Company Logo">
     </header>
     <nav>
-        <a href="home_en.html">Home Page</a>
-        <a href="news_en.html">News</a>
-        <a href="products_en.html">Products</a>
-        <a href="design_service_en.html" class="active">Design Service</a>
-        <a href="members_en.html">Members</a>
-        <a href="contact_en.html">Contact Us</a>
+        <div class="nav-links">
+            <a href="home_en.html">Home Page</a>
+            <a href="news_en.html">News</a>
+            <a href="products_en.html">Products</a>
+            <a href="design_service_en.html" class="active">Design Service</a>
+            <a href="members_en.html">Members</a>
+            <a href="contact_en.html">Contact Us</a>
+        </div>
         <div class="language-switch">
             <a href="design_service_en.html">Eng</a> | 
             <a href="design_service_cn.html">简体中文</a> | 
@@ -90,11 +139,13 @@
         </div>
     </nav>
     <main>
-        <h2>Custom IC Design NRE Service</h2>
-        <ul>
-            <li>Optical front-end modules. Support 28-nm, 12-nm and 5-nm CMOS, 130-nm SiGe BiCMOS, 150-nm GaN, and 90-nm SiPho</li>
-            <li>Millimeter wave wireless front-end modules. Support 28-nm, 12-nm and 5-nm CMOS, 130-nm SiGe BiCMOS, 150-nm GaN, and 28-nm SOI</li>
-        </ul>
+        <div class="service-container">
+            <h2>Custom IC Design NRE Service</h2>
+            <ul>
+                <li>Optical front-end modules. Support 28-nm, 12-nm and 5-nm CMOS, 130-nm SiGe BiCMOS, 150-nm GaN, and 90-nm SiPho</li>
+                <li>Millimeter wave wireless front-end modules. Support 28-nm, 12-nm and 5-nm CMOS, 130-nm SiGe BiCMOS, 150-nm GaN, and 28-nm SOI</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <div class="footer-text">
@@ -103,7 +154,6 @@
             Address: Unit 309B, Floor 5/F, 5W Building, HKSP, Shatin, Hong Kong<br>
             ©2024 All rights reserved by High5 Semiconductor
         </div>
-        <img src="logo.png" alt="Company Logo">
     </footer>
 </body>
 </html>
