--- a/design_service_hk.html
+++ b/design_service_hk.html
@@ -15,59 +15,106 @@
         header {
             background-color: white;
             color: #0F4499;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            padding: 15px;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             padding: 0;
+            font-size: 1.5em;
         }
         header img {
-            height: 80px;
+            height: 200px; /* 電腦端logo尺寸 */
+            margin-top: 15px;
         }
         nav {
+            background-color: white;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .nav-links {
             display: flex;
             justify-content: center;
-            background-color: white;
-            padding: 10px 0;
+            flex-wrap: wrap;
+            gap: 10px;
         }
         nav a {
             color: #0F4499;
-            padding: 0 15px;
+            padding: 8px 15px;
             text-decoration: none;
             text-align: center;
             font-weight: bold;
+            white-space: nowrap;
         }
         nav a:hover, nav .active {
             background-color: #ddd;
             color: black;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         .language-switch {
-            margin-left: 20px;
+            text-align: center;
+            margin-top: 10px;
+            padding: 5px;
         }
         main {
-            padding: 20px;
+            padding: 15px;
             max-width: 800px;
             margin: 0 auto;
         }
+        .service-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #0F4499;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+        ul {
+            padding-left: 20px;
+            margin: 0;
+        }
+        li {
+            margin-bottom: 15px;
+            line-height: 1.6;
+            font-size: 1.1em;
+        }
         footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
             background-color: white;
             color: #0F4499;
+            padding: 20px;
             margin-top: 20px;
-        }
-        footer img {
-            height: 100px;
+            text-align: center;
         }
         .footer-text {
             line-height: 1.8;
-            text-align: left;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* 移動端適配 */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.2em;
+            }
+            header img {
+                height: 100px; /* 移動端logo尺寸 */
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
+            .service-container {
+                padding: 15px;
+            }
+            li {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -77,12 +124,14 @@
         <img src="logo.png" alt="公司標誌">
     </header>
     <nav>
-        <a href="home_hk.html">首頁</a>
-        <a href="news_hk.html">新聞</a>
-        <a href="products_hk.html">產品</a>
-        <a href="design_service_hk.html" class="active">設計服務</a>
-        <a href="members_hk.html">成員</a>
-        <a href="contact_hk.html">聯絡我們</a>
+        <div class="nav-links">
+            <a href="home_hk.html">首頁</a>
+            <a href="news_hk.html">新聞</a>
+            <a href="products_hk.html">產品</a>
+            <a href="design_service_hk.html" class="active">設計服務</a>
+            <a href="members_hk.html">成員</a>
+            <a href="contact_hk.html">聯絡我們</a>
+        </div>
         <div class="language-switch">
             <a href="design_service_en.html">Eng</a> | 
             <a href="design_service_cn.html">简体中文</a> | 
@@ -90,11 +139,13 @@
         </div>
     </nav>
     <main>
-        <h2>定制 IC 設計 NRE 服務</h2>
-        <ul>
-            <li>光學前端模組。支持 28-nm、12-nm 和 5-nm CMOS，130-nm SiGe BiCMOS，150-nm GaN 和 90-nm SiPho</li>
-            <li>毫米波無線前端模組。支持 28-nm、12-nm 和 5-nm CMOS，130-nm SiGe BiCMOS，150-nm GaN 和 28-nm SOI</li>
-        </ul>
+        <div class="service-container">
+            <h2>定制 IC 設計 NRE 服務</h2>
+            <ul>
+                <li>光學前端模組。支持 28-nm、12-nm 和 5-nm CMOS，130-nm SiGe BiCMOS，150-nm GaN 和 90-nm SiPho</li>
+                <li>毫米波無線前端模組。支持 28-nm、12-nm 和 5-nm CMOS，130-nm SiGe BiCMOS，150-nm GaN 和 28-nm SOI</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <div class="footer-text">
@@ -103,7 +154,6 @@
             地址: 香港新界香港科學園5W大樓5樓309B室<br>
             ©2024 高武半導體保留所有權利
         </div>
-        <img src="logo.png" alt="公司標誌">
     </footer>
 </body>
 </html>
