--- a/news_cn.html
+++ b/news_cn.html
@@ -15,72 +15,107 @@
         header {
             background-color: white;
             color: #0F4499;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            padding: 15px;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             padding: 0;
+            font-size: 1.5em;
         }
         header img {
-            height: 80px;
+            height: 200px; /* 电脑端logo尺寸 */
+            margin-top: 15px;
         }
         nav {
+            background-color: white;
+            padding: 10px;
+            overflow-x: auto;
+        }
+        .nav-links {
             display: flex;
             justify-content: center;
-            background-color: white;
-            padding: 10px 0;
+            flex-wrap: wrap;
+            gap: 10px;
         }
         nav a {
             color: #0F4499;
-            padding: 0 15px;
+            padding: 8px 15px;
             text-decoration: none;
             text-align: center;
             font-weight: bold;
+            white-space: nowrap;
         }
         nav a:hover, nav .active {
             background-color: #ddd;
             color: black;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         .language-switch {
-            margin-left: 20px;
+            text-align: center;
+            margin-top: 10px;
+            padding: 5px;
         }
         main {
-            padding: 20px;
+            padding: 15px;
             max-width: 800px;
             margin: 0 auto;
         }
         .news-item {
-            margin-bottom: 40px;
+            background-color: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .news-item img {
             width: 100%;
             height: auto;
             display: block;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            border-radius: 5px;
         }
         .news-item p {
             font-size: 1.1em;
+            line-height: 1.6;
+            margin: 0;
+            color: #0F4499;
             font-weight: bold;
         }
         footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
             background-color: white;
             color: #0F4499;
+            padding: 20px;
             margin-top: 20px;
-        }
-        footer img {
-            height: 100px;
+            text-align: center;
         }
         .footer-text {
             line-height: 1.8;
-            text-align: left;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.2em;
+            }
+            header img {
+                height: 100px; /* 移动端logo尺寸 */
+            }
+            nav {
+                padding: 5px;
+            }
+            nav a {
+                padding: 6px 12px;
+                font-size: 0.9em;
+            }
+            .news-item {
+                padding: 15px;
+            }
+            .news-item p {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -90,12 +125,14 @@
         <img src="logo.png" alt="公司标志">
     </header>
     <nav>
-        <a href="home_cn.html">首页</a>
-        <a href="news_cn.html" class="active">新闻</a>
-        <a href="products_cn.html">产品</a>
-        <a href="design_service_cn.html">设计服务</a>
-        <a href="members_cn.html">成员</a>
-        <a href="contact_cn.html">联系我们</a>
+        <div class="nav-links">
+            <a href="home_cn.html">首页</a>
+            <a href="news_cn.html" class="active">新闻</a>
+            <a href="products_cn.html">产品</a>
+            <a href="design_service_cn.html">设计服务</a>
+            <a href="members_cn.html">成员</a>
+            <a href="contact_cn.html">联系我们</a>
+        </div>
         <div class="language-switch">
             <a href="news_en.html">Eng</a> | 
             <a href="news_cn.html">简体中文</a> | 
@@ -106,7 +143,7 @@
         <section id="news">
             <div class="news-item">
                 <img src="Dr Chi with John Lee.jpg" alt="Dr Chi with John Lee">
-                <p>香港行政长官李家超在上海第七届进博会上会见了高武半导体首席执行官罗博士</p>
+                <p>香港行政长官李家超在上海第七届进博会上会见了高武半导体首席执行官罗志耀博士</p>
             </div>
             <div class="news-item">
                 <img src="Prof Yue got GuangHua Award.jpg" alt="Prof Yue got GuangHua Award">
@@ -121,7 +158,6 @@
             地址: 香港新界沙田香港科学园5W大楼5楼309B室<br>
             ©2024 高武半导体保留所有权利
         </div>
-        <img src="logo.png" alt="公司标志">
     </footer>
 </body>
 </html>
